--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="glass-container">
         <div class="glass">
             <div class="grid-container">
-                <div class="content"><a href="#" target="_blank">THA 1</a></div>
+                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA1/Letter.html" target="_blank">THA 1</a></div>
                 <div class="content">THA 2</div>
                 <div class="content">THA 3</div>
                 <div class="content">THA 4</div>
