--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glass Landing Page</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css/">
 </head>
 <body>
     <div class="glass-container">
         <div class="glass">
             <div class="grid-container">
                 <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA1/Letter.html" target="_blank">THA 1</a></div>
-                <div class="content">THA 2</div>
-                <div class="content">THA 3</div>
-                <div class="content">THA 4</div>
-                <div class="content">THA 5</div>
-                <div class="content">THA 6</div>
-                <div class="content">THA 7</div>
-                <div class="content">THA 8</div>    
+                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA2/LetterStyle.html" target="_blank">THA 2</a></div>
+                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA3/resume.html" target="_blank">THA 3</a></div>
+                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA4/clock.html" target="_blank">THA 4</a></div>
+                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA5/Index.html" target="_blank">THA 5</a></div>
+                <div class="content"><a href="#" target="_blank">THA 6</a></div>
+                <div class="content"><a href="#" target="_blank">THA 7</a></div>
+                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA8/" target="_blank">THA 8</a></div>    
             </div>
         </div>
     </div>
