--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="glass-container">
         <div class="glass">
             <div class="grid-container">
-                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA1/Letter.html" target="_blank">THA 1</a></div>
+                <div class="content"><a href="./THA1/Letter.html/" target="_blank">THA 1</a></div>
                 <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA2/LetterStyle.html" target="_blank">THA 2</a></div>
                 <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA3/resume.html" target="_blank">THA 3</a></div>
                 <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA4/clock.html" target="_blank">THA 4</a></div>
