--- a/index.html
+++ b/index.html
@@ -5,7 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glass Landing Page</title>
-    <link rel="stylesheet" href="./style.css/">
+    <style>
+        *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.glass-container{
+    min-height: 100vh;
+    background: linear-gradient(to right top, rgba(9,30,61,1), rgba(69,179,224,1));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.glass{
+    background: white;
+    min-height: 80vh;
+    width: 60%;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255,255,255, 0.3));
+    border-radius: 2rem;
+    z-index: 4;
+    backdrop-filter: blur(1.8rem);
+}
+
+.grid-container{
+    display: grid;    
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-gap: 8px;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    font-size: 1.6rem;
+    color: white;
+    font-weight: bold;
+}
+
+.content{
+    padding: 4px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(9, 38, 82, 0.932);
+    border-radius: 13px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.content:hover{
+    background-color: rgb(4, 35, 82);
+}
+
+.circle1, .circle2{
+    background: white;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.575), rgba(255, 255, 255, 0.253));
+    height: 20rem;
+    width: 20rem;
+    position: absolute;
+    border-radius: 50%;
+}
+
+.circle1{
+    top: 5%;
+    right: 15%;
+}
+
+.circle2{
+    bottom: 5%;
+    left: 10%;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+    </style>
 </head>
 <body>
     <div class="glass-container">
