--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ a{
         <div class="glass">
             <div class="grid-container">
                 <div class="content"><a href="./THA1/Letter.html" target="_blank">THA 1</a></div>
-                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA2/LetterStyle.html" target="_blank">THA 2</a></div>
-                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA3/resume.html" target="_blank">THA 3</a></div>
-                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA4/clock.html" target="_blank">THA 4</a></div>
-                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA5/Index.html" target="_blank">THA 5</a></div>
+                <div class="content"><a href="./THA2/LetterStyle.html" target="_blank">THA 2</a></div>
+                <div class="content"><a href="./THA3/resume.html" target="_blank">THA 3</a></div>
+                <div class="content"><a href="./THA4/clock.html" target="_blank">THA 4</a></div>
+                <div class="content"><a href="./THA5/Index.html" target="_blank">THA 5</a></div>
                 <div class="content"><a href="#" target="_blank">THA 6</a></div>
                 <div class="content"><a href="#" target="_blank">THA 7</a></div>
-                <div class="content"><a href="https://ankkyprasad.github.io/FrontEnd_THA/THA8/" target="_blank">THA 8</a></div>    
+                <div class="content"><a href="./THA8/" target="_blank">THA 8</a></div>    
             </div>
         </div>
     </div>
