--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a{
                 <div class="content"><a href="#" target="_blank">THA 6</a></div>
                 <div class="content"><a href="#" target="_blank">THA 7</a></div>
                 <div class="content"><a href="./THA8/" target="_blank">THA 8</a></div>
-<!--                 <div class="content"><a href="./THA9/" target="_blank">THA 9</a></div> -->
+                <div class="content"><a href="./THA9/" target="_blank">THA 9</a></div>
                 <div class="content"><a href="./THA10/" target="_blank">THA 10</a></div>
             </div>
         </div>
