--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ a{
                 <div class="content"><a href="./THA8/" target="_blank">THA 8</a></div>
                 <div class="content"><a href="./THA9/" target="_blank">THA 9</a></div>
                 <div class="content"><a href="./THA10/" target="_blank">THA 10</a></div>
+                <div class="content"><a href="./THA11/" target="_blank">THA 11</a></div>
+                <div class="content"><a href="./THA12/" target="_blank">THA 12</a></div>
             </div>
         </div>
     </div>
