--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ a{
                 <div class="content"><a href="./THA10/" target="_blank">THA 10</a></div>
                 <div class="content"><a href="./THA11/" target="_blank">THA 11</a></div>
                 <div class="content"><a href="./THA12/" target="_blank">THA 12</a></div>
+                <div class="content"><a href="./THA13/" target="_blank">THA 13</a></div>
             </div>
         </div>
     </div>
