--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ a{
                 <div class="content"><a href="./THA11/" target="_blank">THA 11</a></div>
                 <div class="content"><a href="./THA12/" target="_blank">THA 12</a></div>
                 <div class="content"><a href="./THA13/" target="_blank">THA 13</a></div>
+                <div class="content"><a href="./THA14/" target="_blank">THA 14</a></div>
             </div>
         </div>
     </div>
