--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ a{
                 <div class="content"><a href="./THA12/" target="_blank">THA 12</a></div>
                 <div class="content"><a href="./THA13/" target="_blank">THA 13</a></div>
                 <div class="content"><a href="./THA14/" target="_blank">THA 14</a></div>
+                <div class="content"><a href="https://tha-15.netlify.app/" target="_blank">THA 15</a></div>
+                <div class="content"><a href="https://tha-16.netlify.app/" target="_blank">THA 16</a></div>
             </div>
         </div>
     </div>
