--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ a{
                 <div class="content"><a href="./THA14/" target="_blank">THA 14</a></div>
                 <div class="content"><a href="https://tha-15.netlify.app/" target="_blank">THA 15</a></div>
                 <div class="content"><a href="https://tha-16.netlify.app/" target="_blank">THA 16</a></div>
+                <div class="content"><a href="https://nifty-payne-ca39eb.netlify.app/" target="_blank">THA 17</a></div>
             </div>
         </div>
     </div>
