--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ a{
                 <div class="content"><a href="https://tha-15.netlify.app/" target="_blank">THA 15</a></div>
                 <div class="content"><a href="https://tha-16.netlify.app/" target="_blank">THA 16</a></div>
                 <div class="content"><a href="https://nifty-payne-ca39eb.netlify.app/" target="_blank">THA 17</a></div>
+                <div class="content"><a href="https://wizardly-wilson-432bef.netlify.app/" target="_blank">THA 18</a></div>
             </div>
         </div>
     </div>
