updated landing page

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@ a{
                 <div class="content"><a href="https://tha-16.netlify.app/" target="_blank">THA 16</a></div>
                 <div class="content"><a href="https://nifty-payne-ca39eb.netlify.app/" target="_blank">THA 17</a></div>
                 <div class="content"><a href="https://wizardly-wilson-432bef.netlify.app/" target="_blank">THA 18</a></div>
+                <div class="content"><a href="https://gracious-davinci-3b4436.netlify.app/" target="_blank">THA 19</a></div>
+                <div class="content"><a href="https://nifty-knuth-544006.netlify.app/" target="_blank">THA 20</a></div>
+                <div class="content"><a href="https://musing-fermi-2580a1.netlify.app/" target="_blank">THA 21</a></div>
+                <div class="content"><a href="https://eloquent-visvesvaraya-8861d7.netlify.app/" target="_blank">THA 22</a></div>
+                <div class="content"><a href="https://confident-jackson-890239.netlify.app/" target="_blank">THA 23</a></div>
+                <div class="content"><a href="https://youthful-panini-cca8f0.netlify.app/" target="_blank">THA 24</a></div>
+                <div class="content"><a href="https://friendly-sammet-20ab23.netlify.app/" target="_blank">THA 25</a></div>
+                <div class="content"><a href="https://upbeat-sammet-312ded.netlify.app/" target="_blank">Other THA</a></div>
             </div>
         </div>
     </div>
