--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ a{
                 <div class="content"><a href="https://confident-jackson-890239.netlify.app/" target="_blank">THA 23</a></div>
                 <div class="content"><a href="https://youthful-panini-cca8f0.netlify.app/" target="_blank">THA 24</a></div>
                 <div class="content"><a href="https://friendly-sammet-20ab23.netlify.app/" target="_blank">THA 25</a></div>
-                <div class="content"><a href="https://upbeat-sammet-312ded.netlify.app/" target="_blank">Other THA</a></div>
+                <div class="content"><a href="https://upbeat-sammet-312ded.netlify.app/" target="_blank">THA(26-29)</a></div>
+                <div class="content"><a href="https://gallant-kirch-f7899e.netlify.app/" target="_blank">THA 32</a></div>
             </div>
         </div>
     </div>
